// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`workspace tool surface > system prompt is stable 1`] = `
"# Identity
- You are ThinkEx's workspace assistant. Help the user work in their actual ThinkEx workspace.

# Workspace Boundaries
- Actual workspace = user-visible ThinkEx content. Private sandbox = assistant-only scratch. Never present sandbox files as workspace items.
- Inspect and change the actual workspace only through actual workspace tools. Do not claim to have read workspace content unless a workspace tool returned it.
- Resolve this/it/that/here/above/the page/this file from current-turn context: selected quotes, then active view, then active/open items. Ask briefly before changes if ambiguous.
- Use relationships silently for navigation and provenance. Mention them only if the user asks or they materially affect the answer.
- Web tools read public web content only.

# Tool Use
- User-visible tool calls need a short activity title (see each tool's title field).
- Do not narrate routine tool progress in chat; titles already show it.
- Current turn includes user-local date/time. Use time tools only for exact UTC/zone lookups or relative-time math.

# Response Style
- Lead with the answer or outcome. Prefer 1-3 sentences or a tight list.
- Expand only when the user asks for more depth, or when a short answer would mislead. Do not treat ordinary questions as an excuse to essay.
- Plain language: match the user's wording. Prefer everyday words; if a technical term is needed, use it once with a brief plain gloss. Name workspace things as the user would.
- Stay readable: cut unnecessary detail, do not compress into jargon, abbreviations, invented labels, or arrow-chain shorthand.
- No preamble, postamble, praise, question-restating, or filler closers ('In summary', 'Hope this helps').
- No process meta in the final answer (e.g. 'Based on my research', 'Let me compile', 'I found that'). State the result.
- After tools, state the outcome, not the full trail, unless the user needs the steps.
- Treat user claims as hypotheses. Check context before agreeing; challenge weak assumptions directly but respectfully.
- Mention assumptions, uncertainty, and tradeoffs only when they change the answer. Keep disclaimers short.

# Output Format
- GitHub-flavored Markdown. Use headings, lists, tables, or fenced code blocks only when they help scanning. Flat lists; short headings; no nested bullets.
- Diagrams only when asked: one focused fenced \`mermaid\` block (~10 nodes, short labels). No frontmatter, init, custom styles, HTML, links, or images. Include concise \`accTitle\` and \`accDescr\`.
- Math: \`$...$\` inline, \`$$...$$\` on their own lines for blocks. Do not use \`\\(...\\)\` or \`\\[...\\]\`. Chemistry: \`\\ce{...}\`; units: \`\\pu{...}\`.
- Chat only: escape every literal dollar sign as \`\\$\` (\`\\$5\`, not \`$5\`). In document/widget HTML, write money plainly (\`$30\`) because \`\\$\` shows a backslash there.

# Memory
- Memory is for durable preferences, goals, and decisions only. Do not store transient requests, secrets, full documents, or workspace state.

Keep the final answer concise unless the user asked for depth or a short answer would mislead."
`;

exports[`workspace tool surface > workspace_create_items input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "items": {
      "description": "One or more folders or documents to create in order, at most 20. Parent folders must already exist or be created earlier in the same request.",
      "items": {
        "anyOf": [
          {
            "additionalProperties": false,
            "properties": {
              "path": {
                "description": "Final absolute path for the folder to create.",
                "minLength": 1,
                "type": "string",
              },
              "relations": {
                "description": "Optional relationships from this new folder to other workspace items, at most 20.",
                "items": {
                  "additionalProperties": false,
                  "properties": {
                    "kind": {
                      "description": "\`derived_from\` means this item was created or materially changed from the linked item. \`references\` means this item cites or points to the linked item.",
                      "enum": [
                        "derived_from",
                        "references",
                      ],
                      "type": "string",
                    },
                    "note": {
                      "description": "Optional short source detail, like pages 12-14 or section on photosynthesis.",
                      "maxLength": 240,
                      "type": "string",
                    },
                    "path": {
                      "description": "Absolute path of the related ThinkEx workspace item.",
                      "minLength": 1,
                      "type": "string",
                    },
                  },
                  "required": [
                    "kind",
                    "path",
                  ],
                  "type": "object",
                },
                "maxItems": 20,
                "type": "array",
              },
              "type": {
                "const": "folder",
                "type": "string",
              },
            },
            "required": [
              "type",
              "path",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "initialContent": {
                "description": "Optional initial HTML content for the document.",
                "maxLength": 512000,
                "type": "string",
              },
              "path": {
                "description": "Final absolute path for the document to create.",
                "minLength": 1,
                "type": "string",
              },
              "relations": {
                "description": "Optional relationships from this new document to other workspace items, at most 20.",
                "items": {
                  "additionalProperties": false,
                  "properties": {
                    "kind": {
                      "description": "\`derived_from\` means this item was created or materially changed from the linked item. \`references\` means this item cites or points to the linked item.",
                      "enum": [
                        "derived_from",
                        "references",
                      ],
                      "type": "string",
                    },
                    "note": {
                      "description": "Optional short source detail, like pages 12-14 or section on photosynthesis.",
                      "maxLength": 240,
                      "type": "string",
                    },
                    "path": {
                      "description": "Absolute path of the related ThinkEx workspace item.",
                      "minLength": 1,
                      "type": "string",
                    },
                  },
                  "required": [
                    "kind",
                    "path",
                  ],
                  "type": "object",
                },
                "maxItems": 20,
                "type": "array",
              },
              "type": {
                "const": "document",
                "type": "string",
              },
            },
            "required": [
              "type",
              "path",
            ],
            "type": "object",
          },
        ],
      },
      "maxItems": 20,
      "minItems": 1,
      "type": "array",
    },
  },
  "required": [
    "items",
  ],
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_delete_items input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "paths": {
      "description": "Absolute paths of one or more actual ThinkEx workspace items to delete, at most 20.",
      "items": {
        "minLength": 1,
        "type": "string",
      },
      "maxItems": 20,
      "minItems": 1,
      "type": "array",
    },
  },
  "required": [
    "paths",
  ],
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_edit_item input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "edits": {
      "description": "Ordered edits, at most 40. Target a block with the exact editRef from a document or block read. A block read returns the exact content that replace_text matches. Use overwrite only to discard the entire document and write a new one.",
      "items": {
        "anyOf": [
          {
            "additionalProperties": false,
            "properties": {
              "editRef": {
                "description": "Exact editRef from a recent document or block read.",
                "maxLength": 64,
                "minLength": 1,
                "type": "string",
              },
              "html": {
                "description": "Schema-constrained HTML fragment. Model-supplied data-edit-ref attributes are ignored.",
                "maxLength": 512000,
                "type": "string",
              },
              "op": {
                "enum": [
                  "insert_after",
                  "insert_before",
                  "replace",
                ],
                "type": "string",
              },
            },
            "required": [
              "editRef",
              "html",
              "op",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "editRef": {
                "description": "Exact editRef from a recent document or block read.",
                "maxLength": 64,
                "minLength": 1,
                "type": "string",
              },
              "op": {
                "const": "delete",
                "type": "string",
              },
            },
            "required": [
              "editRef",
              "op",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "html": {
                "description": "Schema-constrained HTML fragment. Model-supplied data-edit-ref attributes are ignored.",
                "maxLength": 512000,
                "type": "string",
              },
              "op": {
                "const": "overwrite",
                "type": "string",
              },
            },
            "required": [
              "html",
              "op",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "editRef": {
                "description": "Exact editRef from a recent document or block read.",
                "maxLength": 64,
                "minLength": 1,
                "type": "string",
              },
              "find": {
                "description": "Exact text to replace inside the target block, copied from a read. It must appear exactly once in that block; if it matches more than once the edit fails instead of replacing every occurrence.",
                "maxLength": 512000,
                "minLength": 1,
                "type": "string",
              },
              "op": {
                "const": "replace_text",
                "type": "string",
              },
              "replace": {
                "description": "Replacement text. May be empty to delete the matched text.",
                "maxLength": 512000,
                "type": "string",
              },
            },
            "required": [
              "editRef",
              "find",
              "op",
              "replace",
            ],
            "type": "object",
          },
        ],
      },
      "maxItems": 40,
      "minItems": 1,
      "type": "array",
    },
    "path": {
      "description": "Absolute path of one actual ThinkEx workspace item to edit.",
      "minLength": 1,
      "type": "string",
    },
  },
  "required": [
    "path",
    "edits",
  ],
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_link_items input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "path": {
      "description": "Absolute path of the workspace item to link from.",
      "minLength": 1,
      "type": "string",
    },
    "relations": {
      "description": "Relationships from this item to other workspace items, at most 20.",
      "items": {
        "additionalProperties": false,
        "properties": {
          "kind": {
            "description": "\`derived_from\` means this item was created or materially changed from the linked item. \`references\` means this item cites or points to the linked item.",
            "enum": [
              "derived_from",
              "references",
            ],
            "type": "string",
          },
          "note": {
            "description": "Optional short source detail, like pages 12-14 or section on photosynthesis.",
            "maxLength": 240,
            "type": "string",
          },
          "path": {
            "description": "Absolute path of the related ThinkEx workspace item.",
            "minLength": 1,
            "type": "string",
          },
        },
        "required": [
          "kind",
          "path",
        ],
        "type": "object",
      },
      "maxItems": 20,
      "minItems": 1,
      "type": "array",
    },
  },
  "required": [
    "path",
    "relations",
  ],
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_list_items input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "offset": {
      "description": "Zero-based item offset. Use nextOffset from the previous result to continue.",
      "maximum": 9007199254740991,
      "minimum": 0,
      "type": "integer",
    },
    "path": {
      "description": "Absolute path in the actual ThinkEx workspace. Defaults to /.",
      "minLength": 1,
      "type": "string",
    },
    "recursive": {
      "description": "Include nested descendants. Defaults to false for immediate children only.",
      "type": "boolean",
    },
  },
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_move_items input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "destinationPath": {
      "description": "Absolute path of the destination folder. Use / for the workspace root.",
      "minLength": 1,
      "type": "string",
    },
    "paths": {
      "description": "Absolute paths of one or more actual ThinkEx workspace items to move, at most 20.",
      "items": {
        "minLength": 1,
        "type": "string",
      },
      "maxItems": 20,
      "minItems": 1,
      "type": "array",
    },
  },
  "required": [
    "destinationPath",
    "paths",
  ],
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_read_items input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "requests": {
      "description": "Ordered workspace content reads, at most 20.",
      "items": {
        "anyOf": [
          {
            "additionalProperties": false,
            "properties": {
              "mode": {
                "const": "start",
                "type": "string",
              },
              "path": {
                "description": "Absolute path of the workspace item to read.",
                "minLength": 1,
                "type": "string",
              },
            },
            "required": [
              "path",
              "mode",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "mode": {
                "const": "pages",
                "type": "string",
              },
              "path": {
                "description": "Absolute path of the workspace item to read.",
                "minLength": 1,
                "type": "string",
              },
              "range": {
                "description": "Up to 20 physical pages from an extracted file, like 1, 3, 5-7, or 1,4-6. Defaults to page 1.",
                "minLength": 1,
                "pattern": "^\\d+(?:\\s*-\\s*\\d+)?(?:\\s*,\\s*\\d+(?:\\s*-\\s*\\d+)?)*$",
                "type": "string",
              },
            },
            "required": [
              "path",
              "mode",
              "range",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "cursor": {
                "description": "Opaque cursor returned by a previous read.",
                "maxLength": 4096,
                "minLength": 1,
                "type": "string",
              },
              "mode": {
                "const": "continue",
                "type": "string",
              },
              "path": {
                "description": "Absolute path of the workspace item to read.",
                "minLength": 1,
                "type": "string",
              },
            },
            "required": [
              "path",
              "cursor",
              "mode",
            ],
            "type": "object",
          },
          {
            "additionalProperties": false,
            "properties": {
              "editRef": {
                "description": "editRef of one block from an earlier document read. The result returns the block in full with its current editRef.",
                "maxLength": 64,
                "minLength": 1,
                "type": "string",
              },
              "mode": {
                "const": "block",
                "type": "string",
              },
              "path": {
                "description": "Absolute path of the workspace item to read.",
                "minLength": 1,
                "type": "string",
              },
            },
            "required": [
              "path",
              "editRef",
              "mode",
            ],
            "type": "object",
          },
        ],
      },
      "maxItems": 20,
      "minItems": 1,
      "type": "array",
    },
  },
  "required": [
    "requests",
  ],
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_rename_item input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "name": {
      "description": "New user-visible item name.",
      "maxLength": 160,
      "minLength": 1,
      "type": "string",
    },
    "path": {
      "description": "Absolute path of one actual ThinkEx workspace item to rename.",
      "minLength": 1,
      "type": "string",
    },
  },
  "required": [
    "name",
    "path",
  ],
  "type": "object",
}
`;

exports[`workspace tool surface > workspace_search input schema is stable 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "path": {
      "description": "Optional absolute workspace path. A folder searches recursively; an item searches only that item. Defaults to /.",
      "minLength": 1,
      "type": "string",
    },
    "query": {
      "description": "Text or natural-language question to search for in the workspace.",
      "maxLength": 1000,
      "minLength": 2,
      "type": "string",
    },
    "types": {
      "description": "Optional content types to include. Defaults to documents and files.",
      "items": {
        "enum": [
          "document",
          "file",
        ],
        "type": "string",
      },
      "minItems": 1,
      "type": "array",
    },
  },
  "required": [
    "query",
  ],
  "type": "object",
}
`;
